--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "markdown-it": "^12.2.0",
     "markdown-it-plain-text": "^0.2.1",
     "vuepress": "^1.8.2",
+    "vuepress-plugin-element-ui": "^1.1.0",
     "vuepress-plugin-nprogress": "^1.1.8",
     "vuepress-plugin-reading-time": "^0.1.1",
     "windicss-webpack-plugin": "^1.4.4"
@@ -24,7 +25,9 @@
     "@kawarimidoll/vuepress-plugin-tailwind": "^2.0.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
     "@vuepress/plugin-last-updated": "^1.8.2",
+    "codemirror": "^5.62.3",
     "node-sass": "^6.0.1",
     "sass-loader": "10",
     "vuepress-plugin-git-log": "^1.0.1"
