--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "codemirror": "^5.62.3",
     "node-sass": "^6.0.1",
     "sass-loader": "10",
-    "vuepress-plugin-git-log": "^1.0.1"
+    "vue-infinite-loading": "^2.4.5",
+    "vuepress-plugin-git-log": "^1.0.1",
+    "vuepress-plugin-global-toc": "^1.1.0"
   }
 }
