--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-sass": "^6.0.1",
     "sass-loader": "10",
     "vue-infinite-loading": "^2.4.5",
+    "vue-utterances": "^0.1.4",
     "vuepress-plugin-git-log": "^1.0.1",
     "vuepress-plugin-global-toc": "^1.1.0"
   }
