--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
 
       - name: Install and Build
         run: |
-          npm install
-          npm run docs:build
+          yarn install
+          yarn docs:build
 
       - name: Deploy Build Files
         env:
