--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "@vuepress/plugin-last-updated": "^1.8.2",
     "codemirror": "^5.62.3",
-    "core-js": "^3.17.3",
+    "core-js": "2.6.4",
     "node-sass": "^6.0.1",
     "sass-loader": "10",
     "vue-infinite-loading": "^2.4.5"
