--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,17 @@
-name: blog deploy
-
-on:
-  push:
-    branches: [master]
-
+name: A TO A:GH_PAGES
+on: [push]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@master
 
-      - name: Install and Build
-        run: |
-          yarn install
-          yarn docs:build
-
-      - name: Deploy Build Files
+      - name: Build and Deploy
+        uses: jenkey2011/vuepress-deploy@master
         env:
-          # You should enroll ACEESS_TOKEN to repository's secret
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        run: |
-          cd .vuepress/dist
-          git config --global user.email "notedev.jp@gmail.com"
-          git config --global user.name "suumokr"
-          git init
-          git add -A
-          git commit -m 'deploy with vuepress'
-          git push -f https://${ACCESS_TOKEN}@github.com/${GITHUB_REPOSITORY}.git master:gh-pages
+          TARGET_REPO: jenkey2011/vuepress-deploy-demo
+          TARGET_BRANCH: gh_pages
+          BUILD_SCRIPT: yarn && yarn build
+          BUILD_DIR: .vuepress/dist/
