--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,16 @@
-name: blog deploy
-
-on:
-  push:
-    branches: [master]
-
+name: Build and Deploy
+on: [push]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: checkout
-        uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@main
 
-      - name: Install and Build
-        run: |
-          yarn install
-          yarn docs:build
-
-      - name: Deploy Build Files
+      - name: Vuepress deploy
+        uses: jenkey2011/vuepress-deploy@1.0.1
         env:
-          # You should enroll ACEESS_TOKEN to repository's secret
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        run: |
-          cd .vuepress/dist
-          git config --global user.email "notedev.jp@gmail.com"
-          git config --global user.name "suumokr"
-          git init
-          git add -A
-          git commit -m 'deploy with vuepress'
-          git push -f https://${ACCESS_TOKEN}@github.com/${GITHUB_REPOSITORY}.git master:gh-pages
+          BUILD_SCRIPT: yarn && yarn build
+          TARGET_BRANCH: gh-pages
+          BUILD_DIR: build/
