--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@main
+        uses: actions/checkout@master
 
-      - name: Vuepress deploy
-        uses: jenkey2011/vuepress-deploy@1.0.1
+      - name: vuepress-deploy
+        uses: suumokr/suumokr.github.io@master
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BUILD_SCRIPT: yarn && yarn build
+          TARGET_REPO: username/repo
           TARGET_BRANCH: gh-pages
-          BUILD_DIR: build/
+          BUILD_SCRIPT: yarn && yarn docs:build
+          BUILD_DIR: /
