--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,7 @@ jobs:
 
       - name: Install and Build
         run: |
-          npm install
-          npm run build
+          yarn && yarn docs:build
 
       - name: Deploy Build Files
         env:
